kmail: do not duplicate contacts when saving distribution list

Save a known contact by reference to its Akonadi ID plus possibly
email address (if it is not the preferrred one).  Only save an
unknown contact by name and email, do not add it to the address book.
Correctly handle the case where the email search returns multiple
contacts.

REVIEW:113180
BUG:325303